GH-58 : Removed two images send in create feedback API because from rest assured it's creating issue with img order